<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"

        />
    <item
        android:id="@+id/tab_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        />
    <item
        android:id="@+id/tab_appointment"
        android:icon="@drawable/ic_appointment_black_24dp"
        android:title="@string/appointment"
        />
    <item
        android:id="@+id/tab_reminder"
        android:icon="@drawable/ic_reminder_black_24dp"
        android:title="@string/reminder"
        />
    <item
        android:id="@+id/tab_profile"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/pt_profile"/>

</menu>