<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_doc_profile"
            android:icon="@drawable/ic_user_black_24dp"
            android:title="@string/doc_profile" />

        <item
            android:id="@+id/nav_doc_appointment"
            android:icon="@drawable/ic_appointment_black_24dp"
            android:title="@string/appointment"
            />
        <item
            android:id="@+id/nav_doc_medicalRecord"
            android:icon="@drawable/ic_medicalrecord_black_24dp"
            android:title="@string/medicalRecord"
            />

        <item
            android:id="@+id/nav_doc_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback"
            />
        <item
            android:id="@+id/nav_doc_signout"
            android:icon="@drawable/ic_signout_black_24dp"
            android:title="@string/signout"
            />


    </group>
</menu>