<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgray"
    tools:context="com.example.sarnobatvipul.mydocapp.SignUp_pt_Activity">

    <RelativeLayout
        android:id="@+id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.CardView
            android:id="@+id/cd_imgview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/colorPrimaryDark">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/pt_icon"
                />

        </android.support.v7.widget.CardView>
        <TextView
            android:layout_below="@+id/cd_imgview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/lightblue1"
            android:fontFamily="sans-serif-smallcaps"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_bottom"
        android:layout_below="@id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_pt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:gravity="center|start"
            android:textSize="15dp"
            />
        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/pt_name_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_pt_name"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="05dp"
            android:gravity="center|start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="text"
            android:background="@drawable/btn_ok"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:hint="@string/name"
            />



        <TextView
            android:id="@+id/tv_pt_emailID"
            android:layout_below="@+id/pt_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/enteremailid"
            android:textColor="@color/white"
            android:gravity="center|start"
            android:textSize="15dp"
            />
        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/pt_emailid_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_pt_emailID"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="05dp"
            android:gravity="center|start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/btn_ok"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:hint="@string/email"
            />

        <TextView
            android:id="@+id/tv_pt_contact"
            android:layout_below="@+id/pt_emailid_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/contactno"
            android:textColor="@color/white"
            android:gravity="center|start"
            android:textSize="15dp"
            />
        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/pt_contact_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_pt_contact"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="05dp"
            android:gravity="center|start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="number"
            android:background="@drawable/btn_ok"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:hint="@string/contactno"
            />
        <TextView
            android:id="@+id/tv_pt_pwd"
            android:layout_below="@+id/pt_contact_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/enterpassword"
            android:textColor="@color/white"
            android:gravity="center|start"
            android:textSize="15dp"
            />
        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/pt_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_pt_pwd"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="05dp"
            android:gravity="center|start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPassword"
            android:background="@drawable/btn_ok"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:hint="@string/password"
            />

        <ProgressBar
            android:id="@+id/progressbar"
            style="@android:style/Widget.Holo.Light.ProgressBar.Large.Inverse"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/pt_pwd_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>



        <Button
            android:id="@+id/btn_signup_pt"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/four_30radius_btn"
            android:gravity="center"
            android:text="@string/SignUp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="20dp"/>


        <TextView
            android:id="@+id/sign_in_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginhere"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/lightgray1"
            android:textSize="15dp"
            android:fontFamily="sans-serif-smallcaps"/>



    </RelativeLayout>

</RelativeLayout>
